traduccion entre otros

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,13 +11,13 @@
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Iniciar Sesión</button>
                 <small class="text-muted ml-2">
-                    <a href="{% url 'password_reset' %}">Forgot Password?</a>
+                    <a href="{% url 'password_reset' %}">Olvide la contraseña</a>
                 </small>
             </div>
         </form>
         <div class="border-top" pt-3>
             <small class="text-muted">
-                No tienes una cuenta? <a class="ml-2" href="{% url 'register' %}">Regístrate</a>
+                ¿No tienes una cuenta? <a class="ml-2" href="{% url 'register' %}">Regístrate</a>
             </small>
         </div>
     </div>
