--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -14,7 +14,7 @@
         </form>
         <div class="border-top" pt-3>
             <small class="text-muted">
-                Ya tienes una cuenta? <a class="ml-2" href="{% url 'login' %}">Inicia Sesión</a>
+                ¿Ya tienes una cuenta? <a class="ml-2" href="{% url 'login' %}">Inicia Sesión</a>
             </small>
         </div>
     </div>
