--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -31,18 +31,18 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
-                        <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
-                        <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
+                        <a class="nav-item nav-link" href="{% url 'blog-home' %}">Inicio</a>
+                        <a class="nav-item nav-link" href="{% url 'blog-about' %}">Sobre nosotros</a>
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         {% if user.is_authenticated %}
-                            <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
-                            <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-                            <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                            <a class="nav-item nav-link" href="{% url 'post-create' %}">Nuevo Post</a>
+                            <a class="nav-item nav-link" href="{% url 'profile' %}">Perfil</a>
+                            <a class="nav-item nav-link" href="{% url 'logout' %}">Cerrar sesión</a>
                         {% else %}
-                            <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                            <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                            <a class="nav-item nav-link" href="{% url 'login' %}">Iniciar sesión</a>
+                            <a class="nav-item nav-link" href="{% url 'register' %}">Registrarse</a>
                         {% endif %}
                         </div>
                 </div>
@@ -64,12 +64,12 @@
             </div>
             <div class="col-md-4">
                 <div class="content-section">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
+                    <h3>Barra lateral</h3>
+                    <p class='text-muted'>Información importante
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">Latest Posts</li>
-                        <li class="list-group-item list-group-item-light">Announcements</li>
-                        <li class="list-group-item list-group-item-light">Calendars</li>
+                        <li class="list-group-item list-group-item-light">Ultimos posts</li>
+                        <li class="list-group-item list-group-item-light">Anuncios</li>
+                        <li class="list-group-item list-group-item-light">Calendario</li>
                         <li class="list-group-item list-group-item-light">etc</li>
                     </ul>
                     </p>
