--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -4,12 +4,12 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Delete Post</legend>
-                <h2>Are you sure you want to delete the post "{{ object.title }}"</h2>
+                <legend class="border-bottom mb-4">Borrar post</legend>
+                <h2>¿Estas seguro de eliminar el post "{{ object.title }}"?</h2>
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-danger" type="submit">Yes, Delete</button>
-                <a button class="btn btn-outline-secondary" href="{% url 'post-detail' object.id %}">Cancel</a>
+                <button class="btn btn-outline-danger" type="submit">Si, borrar</button>
+                <a button class="btn btn-outline-secondary" href="{% url 'post-detail' object.id %}">Cancelar</a>
             </div>
         </form>                
     </div>
