--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,10 +9,10 @@
                 {% if object.author == user %}
                     <div>
                         <a class="btn btn-secondary btn-sm mt-1 mb-1" 
-                        href="{% url 'post-update' object.id %}">Update</a>
+                        href="{% url 'post-update' object.id %}">Actualizar</a>
 
                         <a class="btn btn-danger btn-sm mt-1 mb-1" 
-                        href="{% url 'post-delete' object.id %}">Delete</a>
+                        href="{% url 'post-delete' object.id %}">Borrar</a>
                     </div>
                 {% endif %}
             </div>
