--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,6 +1,6 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    <h2>You have been logged out</h2>
+    <h2>Has salido de la sesión</h2>
     <div class="border-top" pt-3>
         <small class="text-muted">
             <a href="{% url 'login' %}">Iniciar Sesión</a>
