--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 {% block content %}
     <div class="alert alert-info">
-        Your password has been set.
+        Tu contraseña ha sido establecida.
     </div>
-    <a href="{% url 'login' %}">Sign In Here</a>
+    <a href="{% url 'login' %}">Iniciar sesión</a>
 {% endblock content %}
