--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,6 +1,6 @@
 {% extends "blog/base.html" %}
 {% block content %}
     <div class="alert alert-info">
-        An email has been sent with instructions to reset your password
+        Un email con instrucciones para reiniciar tu contraseña ha sido enviado.
     </div>
 {% endblock content %}
