--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -5,7 +5,7 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Blog Post</legend>
+                <legend class="border-bottom mb-4">Haz tu post de Mobike!</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
@@ -13,4 +13,11 @@
             </div>
         </form>                
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 {% endblock content %}
