--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -2,10 +2,15 @@ body {
     background: #fafafa;
     color: #333333;
     margin-top: 5rem;
+    height: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    color: #444444;
+h1, h2, h3, h4, h5, h6, p{
+    color: black;
+}
+
+.txt-footer{
+    color: white;
 }
 
 ul {
@@ -13,11 +18,11 @@ ul {
 }
 
 .bg-steel {
-    background-color: #5f788a;
+    background-color: #e0431c;
 }
 
 .site-header .navbar-nav .nav-link {
-    color: #cbd5db;
+    color: #dafbff;
 }
 
 .site-header .navbar-nav .nav-link:hover {
@@ -81,4 +86,65 @@ a.article-title:hover {
 
 .account-heading {
     font-size: 2.5rem;
+}
+
+.navbar-brand {
+    font-size: 2rem;
+}
+
+.mapa {
+    margin-top: 21px;
+    margin-bottom: 20px;
+}
+
+.hr {
+    color: white;
+    background-color: white;
+}
+
+.linea-horizontal {
+    margin-top: 2px;
+    margin-bottom: 10px;
+}
+
+.footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+.main_title{
+    color:black
+}
+
+.main_txt{
+    color :black
+}
+
+.sobre {
+    margin-bottom: 215px;
+}
+
+.iniciar {
+    margin-bottom: 297px;
+}
+
+.resetear {
+    margin-bottom: 408px;
+}
+
+.done {
+    margin-bottom: 597px;
+}
+
+.salir {
+    margin-bottom: 576px;
+}
+
+.confirmar {
+    margin-bottom: 242px;
+}
+
+.completado {
+    margin-bottom: 557px;
 }
